triviagame/force-app/main/default/objects/Trivia_Game_Participant__c/Trivia_Game_Participant__c.object-meta.xml
<CustomObject>
    <description>Salesforce Trivia Multiplayer Game: junction object between trivia game and trivia participant</description>
    <label>Trivia Game Participant</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trivia Game Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>