triviagame/force-app/main/default/objects/Trivia_Game_Participant__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: Ranking amongst all the participants in the related game</description>
    <inlineHelpText>Ranking amongst all the participants in the related game</inlineHelpText>
    <label>Ranking</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>