triviagame/force-app/main/default/objects/Trivia_Game_Participant__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Salesforce Trivia Multiplayer Game: Score for the related game and related participant</description>
    <inlineHelpText>Score for the related game and related participant</inlineHelpText>
    <label>Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>