triviagame/force-app/main/default/objects/Trivia_Game_Participant__c/fields/Trivia_Game__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Game__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: master-detail to trivia game</description>
    <inlineHelpText>master-detail to trivia game</inlineHelpText>
    <label>Trivia Game</label>
    <referenceTo>Trivia_Game__c</referenceTo>
    <relationshipLabel>Trivia Game Participants</relationshipLabel>
    <relationshipName>Trivia_Game_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>