triviagame/force-app/main/default/objects/Trivia_Game_Participant__c/fields/Trivia_Participant__c.field-meta.xml
<CustomField>
    <fullName>Trivia_Participant__c</fullName>
    <description>Salesforce Trivia Multiplayer Game: master-detail to trivia participant</description>
    <inlineHelpText>master-detail to trivia participant</inlineHelpText>
    <label>Trivia Participant</label>
    <referenceTo>Trivia_Participant__c</referenceTo>
    <relationshipLabel>Trivia Game Participants</relationshipLabel>
    <relationshipName>Trivia_Game_Participants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>